--- a/aula02.html
+++ b/aula02.html
@@ -45,6 +45,6 @@
         </tr>
     </table>
     <br>
-    <p>Voltar para <a href="aula01.html">Home</a></p>
+    <p>Voltar para <a href="index.html">Home</a></p>
 </body>
 </html>
